fix: #5337 olh mobile reading options overlaped other content

--- a/src/themes/OLH/assets/scss/app.scss
+++ b/src/themes/OLH/assets/scss/app.scss
@@ -887,6 +887,11 @@ div.caption span.label {
 }
 
 @media screen and (max-width: 639px) {
+  .mini-bar.sticky {
+    position: static !important;
+    max-width: none !important;
+  }
+
   .reading-options-bar {
     height: auto !important;
   }
